--- a/index.css
+++ b/index.css
@@ -5,9 +5,9 @@ body {
 #console {
 	font-family: courier, monospace;
 	color: #fff;
-	width:750px;
-	margin-left:auto;
-	margin-right:auto;
+	width:1080px;
+	margin-left:100px;
+	margin-right:100px;
 	margin-top:100px;
 	font-size:14px;
 }
